[FS-13] create subscription stripe service (#22)
* refactor: remove duplicated second_payment_method_id

* feat: stripe service create subscription method

* refactor: use before each to avoid code replication

* feat: create subscription on stripe

* fix: tests with subscription model

* refactor: code review

* fix: code review

* feat: create subscription

* Fix swagger description

* refactor: update swagger

* fix: code review

* feat: update subscription stripe service

* feat: update subscription on stripe

* fix: code review

* feat: update subscription controller action
